--- a/CSS/collections.css
+++ b/CSS/collections.css
@@ -1,13 +1,13 @@
 /* collections */
 
 .collections {
-  height: 500px;
+  height: 100%;
   margin-top: 30px;
   background-color: var(--background-color);
 }
 
 .collections .container {
-  height: 500px;
+  height: 100%;
 }
 
 .collections .border {
@@ -90,13 +90,11 @@
 }
 
 .collections .grid {
-  height: calc(400px - 35px);
   width: 100%;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   gap: 10px;
   margin-top: 35px;
-  margin-right: 35px;
 }
 
 .collections .collections-box::before {
@@ -114,8 +112,4 @@
   border: 1px solid black;
   transform: scale(1.01);
   cursor: pointer;
-}
-
-.collections footer .container {
-  padding: 30px 0px;
 }
