--- a/CSS/style.css
+++ b/CSS/style.css
@@ -193,6 +193,10 @@ img {
   background-color: var(--background-color);
 }
 
+.categories .border {
+  height: 100%;
+}
+
 .categories h1 {
   font-weight: bold;
   font-size: 48px;
@@ -255,7 +259,7 @@ img {
 
 .categories .grid {
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr;
+  grid-template-rows: 100%;
   gap: 15px;
   margin: 35px 0;
 }
